# clang-tidy-plugin-starter

./: .gitignore  CMakeLists.txt  MyCheck.cpp  MyCheck.h  MyClangTidyPluginModule.cpp
.github/workflows/: ci.yml
test/: foo.cpp
