cmake_minimum_required(VERSION 3.20)
project(ClangTidyPlugin C CXX)
find_package(LLVM REQUIRED)
find_package(Clang REQUIRED)
add_library(ClangTidyPlugin MODULE MyClangTidyPluginModule.cpp MyCheck.cpp)
target_compile_features(ClangTidyPlugin PRIVATE cxx_std_17)
target_include_directories(ClangTidyPlugin PRIVATE ${LLVM_INCLUDE_DIRS} ${CLANG_INCLUDE_DIRS})
target_link_libraries(ClangTidyPlugin PRIVATE clangTidy)
